# sbmlsolver

./: .gitattributes  .gitignore  .gitmodules  .project  .readthedocs.yaml  .travis.yml  AUTHORS.txt  Authors.txt  CMakeLists.txt  CMakeSettings.json  CNAME  COPYING.txt  ChangeLog.txt  Dockerfile  Doxyfile.in  FUNDING.txt  Funding.txt  HISTORY  INSTALL  INSTALL.md  LICENSE.md  LICENSE.txt  License.txt  NEWS.txt  NOTICE  NOTICE.txt  Notice.txt  README.md  README.txt  Readme.txt  Roadrunner_build.sh  Roadrunner_build_doc.txt  VERSION.txt  VERSION.txt.in  _config.yml  api_testing.md  azure-pipelines.yml  build-windows.ps1  build.py  build_roadrunner.py  (+20 more)
Wrappers/C/: CMakeLists.txt  CProjects.groupproj  Projects.groupproj  c_api_vs.def  rr_c_api.cpp  rr_c_api.h  rr_c_api_exporter.h  rr_c_api_plugin_routines.cpp  rr_c_api_support.cpp  rr_c_api_support.h  rr_c_types.h  rr_dll_entry_point.cpp  rrc_api-static.cbproj  rrc_api.cbproj  rrc_api.cpp  rrc_api.def  rrc_api.h  rrc_core_api.h  rrc_cpp_support.cpp  rrc_cpp_support.h  rrc_exporter.h  rrc_jobs_api.cpp  rrc_jobs_api.h  rrc_libstruct_api.cpp  rrc_libstruct_api.h  rrc_logging_api.cpp  rrc_logging_api.h  rrc_macros.h  rrc_minimization_api.cpp  rrc_minimization_api.h  rrc_nom_api.cpp  rrc_parameter_api.cpp  rrc_parameter_api.h  rrc_plugin_api.cpp  rrc_plugin_api.h  rrc_support.cpp  rrc_support.h  rrc_test_utilities.cpp  rrc_types.h  rrc_utilities.cpp  (+1 more)
apps/rr/: Args.cpp  Args.h  CMakeLists.txt  README.txt  autolink.cpp  main.cpp
apps/rr-sbml-benchmark/: CMakeLists.txt  main.cpp
apps/rr_performance_tester/: Args.cpp  Args.h  CMakeLists.txt  main.cpp
autotest/: CMakeLists.txt
autotest/compiled-test-suite/: CMakeLists.txt
autotest/python-benchmark-bioinf/: jarnac_bench_stoch.jan  jean_marie_converted_bench.jan  rr_bench_ode.py
autotest/python-unit-tests/: run.py
docs/: CMakeLists.txt  Doxyfile.in  ReadMe.txt  index.html  requirements.txt  run_docs_examples.py
docs/OriginalDoxygenStyleDocs/: index.html
docs/css/: default.css  style.css
docs/docs-build/: .buildinfo  accessing_model.html  api_reference.html  bifurcation.html  genindex.html  index.html  installing_rr.html  integration.html  introduction.html  metabolic.html  objects.inv  py-modindex.html  read_write_functions.html  search.html  searchindex.js  selecting_values.html  simulation_and_integration.html  stability.html  steady_state.html  steady_state_experimental.html  stochastic.html  stoichiometric.html  (+4 more)
documents/: CMakeLists.txt  RoadRunner Manual.docx  RoadRunnerPPT.pptx  c-docs.html.lnk  cpp-docs.html.lnk  python-docs.html.lnk  rrUnitTesting.pptx
examples/: CMakeLists.txt  Examples.groupproj  logging.py
models/: CMakeLists.txt  MinimizationTest_A.xml  README.txt  Readme.txt  bug.xml  event_mod.xml  feedback.xml  functest.xml  simple.xml  squareWaveModel.xml  ss_TurnOnConservationAnalysis.xml  ss_threestep.xml
plugins/: All.groupproj  AllPlugins.groupproj  CMakeLists.txt  README.txt  Readme.txt  rr++.groupproj
rrplugins/: .gitattributes  .gitignore  CMakeLists.txt  RRP_AUTHORS.txt  RRP_CHANGELOG.txt  RRP_FUNDING.txt  RRP_LICENSE.txt  RRP_NEWS.txt  RRP_NOTICE.txt  RRP_README.txt
source/: AdjointSensitivitySolver.cpp  AdjointSensitivitySolver.h  ApproxSteadyStateDecorator.cpp  ApproxSteadyStateDecorator.h  BasicNewtonIteration.cpp  BasicNewtonIteration.h  CMakeLists.txt  CVODEIIntegrator.cpp  CVODEIIntegrator.h  CVODEIntegrator.cpp  CVODEIntegrator.h  Configurable.cpp  Configurable.h  CvodesIntegrator.cpp  CvodesIntegrator.h  Dictionary.cpp  Dictionary.h  DoxygenDocs.h  EulerIntegrator.h  ExecutableModelFactory.cpp  ExecutableModelFactory.h  FactoryWithRegistration.cpp  FactoryWithRegistration.h  FixedPointIteration.cpp  FixedPointIteration.h  ForwardSensitivitySolver.cpp  ForwardSensitivitySolver.h  GillespieIntegrator.cpp  GillespieIntegrator.h  GitInfo.h  IIntegrator.cpp  IIntegrator.h  Integrator.cpp  Integrator.h  IntegratorFactory.cpp  IntegratorFactory.h  IntegratorRegistration.cpp  IntegratorRegistration.h  KinsolErrHandler.cpp  KinsolErrHandler.h  (+334 more)
src/: CMakeLists.txt  CVODEIntegrator.cpp  CVODEIntegrator.h  Dictionary.h  DoxygenDocs.h  DummyScalarSystem.cpp  DummyScalarSystem.h  EulerIntegrator.h  ExecutableModelFactory.cpp  GillespieIntegrator.h  GitInfo.h.in  Integrator.cpp  Integrator.h  RK4Integrator.cpp  RK4Integrator.h  SBMLSolver.cpp  SBMLSolver.h  SBMLSolverOptions.cpp  SBMLSolverOptions.h  SBMLValidator.cpp  doxygen.conf  rrConfig.cpp  rrConfig.h  rrConstants.cpp  rrException.cpp  rrExecutableModel.h  rrFileName.cpp  rrIniSection.cpp  rrLogger.cpp  rrNLEQInterface.cpp  rrNLEQInterface.h  rrRoadRunnerData.cpp  rrRoadRunnerData.h  rrSBMLModelSimulation.cpp  rrSBMLModelSimulation.h  rrSBMLReader.cpp  rrSBMLReader.h  rrSelectionRecord.h  rrSteadyStateSolver.cpp  rrStringUtils.cpp  (+5 more)
test/: CMakeLists.txt  Example.i  RoadRunnerTest.cpp  RoadRunnerTest.h  RoadRunnerTest.py  RoadRunnerTestDirectory.cpp.in  RoadRunnerTestDirectory.h.in  TestModelFactory.cpp  TestModelFactory.h  TestModelFactory.i  TestModelFactoryTests.py  main.cpp  testTestModelFactory.py  test_util.cpp  test_util.h  tmp.py
testing/: Absolute_Tolerance1.rrtest  Add_Species1.rrtest  Bimolecular_end.rrtest  CMakeLists.txt  Conserved_Cycle.rrtest  Conserved_Cycle_and_Branch.rrtest  Cycle.rrtest  Cycle_across_branches.rrtest  Cycle_to_Input_and_Branch.rrtest  Four_Steps.rrtest  Futile_Cycle.rrtest  Gillespie.rrtest  ModelSourceTest.c  ModelSourceTest.h  MultiBranch2.rrtest  Multibranch1.rrtest  README.txt  RatesOfChange.rrtest  Remove_Rules1.rrtest  Remove_Rules3.rrtest  SimpleUniUni.rrtest  Simple_Branch.rrtest  Test_1.rrtest  Test_1.txt  Test_1.xml  Test_2.rrtest  Test_2.xml  Test_3.rrtest  Test_3.xml  jacobian_1.rrtest  normalDistrib.xml  oscli.rrtest  reversible_Jacobian.rrtest  roadRunnerTest_1.xml  rrExcludedTestCases.txt  species_hosu1.xml  species_hosu2.xml  ss_threeSpecies.xml  uniformDistrib.xml
tests/: CMakeLists.txt  README  SBMLFactory.cpp  SBMLFactory.h  main.cpp  quick_test.cpp  results_roadRunnerTest_1.txt
wrappers/: CMakeLists.txt  Doxyfile_c_api.doxy
(+11198 files in other folders)
